--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ wheels/
 
 pylint_output.txt
 
-*/api/resources/oop.mp4
-*/front-end/static/media/oop.mp4
+/api/resources/oop.mp4
+/front-end/static/media/
 
 node_modules
