--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bleach>=6.3.0",
     "fastapi[standard]>=0.120.1",
     "flask>=3.1.2",
     "opencv-python>=4.12.0.88",
